# app.js
@@ -16,7 +16,9 @@ const gameRoutes = require("./routes/game.routes");
 const descriptiveRoutes = require("./routes/descriptive.routes");
 const BarCodeScanRoutes = require("./routes/barCodeScan.routes");
 const CctvStreamRoutes = require("./routes/cctv.routes");
-const deviceRoute = require("./routes/device.routes")
+const deviceRoute = require("./routes/device.routes");
+const conversationRoute = require("./routes/conversation.routes");
+
 
 const swaggerUi = require("swagger-ui-express");
 const swaggerDocument = require("./swagger.json");
@@ -30,11 +32,28 @@ const DescriptivePlay = require("./models/descriptiveplay.model");
 const BarCodeScan = require("./models/barcode_scan.model");
 
 const PORT = process.env.PORT;
+app.use(express.json());
+// app.use((req, res, next) => {
+//   const bearerHeader = req.headers["authorization"];
+//   if (!bearerHeader) return res.status(401).send({ error: "Access denied" });
+
+//   const bearer = bearerHeader.split(" ");
+//   const bearerToken = bearer[1];
+//   req.token = bearerToken;
+
+//   try {
+//     const decoded = jwt.verify(bearerToken, process.env.JWT_SECRET);
+//     req.userId = decoded.userId;
+//     next();
+//   } catch (err) {
+//     return res.status(401).send({ error: "Invalid token" });
+//   }
+// });
+
 app.get("/", (req, res, next) => {
   res.send("HELLO");
 });
 
-app.use(express.json());
 
 app.use(
   "/api-docs",
@@ -60,25 +79,23 @@ app.use("/survey", surveyRoutes);
 app.use("/gameplay", gameplayRoutes);
 app.use("/game", gameRoutes);
 app.use("/descriptive", descriptiveRoutes);
-app.use("/api/v1/", customerRoutes);
+app.use("/api/v1", customerRoutes);
 app.use("/barcodeApi", BarCodeScanRoutes);
 app.use("/cctv", CctvStreamRoutes);
 app.use("/device", deviceRoute);
-
+app.use("/conversation", conversationRoute);
 
 const server = app.listen(PORT, (err) => {
   if (err) console.log("Error in starting Server: " + err);
   else console.log(`Starting server on PORT ${PORT}`);
 });
 
-
-const io = require('socket.io')(server, {
-  pingTimeOut: 60000, // if there is no request on the server io will be off 
+const io = require("socket.io")(server, {
+  pingTimeOut: 60000, // if there is no request on the server io will be off
   cors: {
-    origin: '*'
-  }
-})
-
+    origin: "*",
+  },
+});
 
 const program = async () => {
   const connection = mysql.createConnection({
@@ -90,57 +107,69 @@ const program = async () => {
   });
 
   const instance = new MySQLEvents(connection, {
-    startAtEnd: true // to record only the new binary logs, if set to false or you didn'y provide it all the events will be console.logged after you start the app
+    startAtEnd: true, // to record only the new binary logs, if set to false or you didn'y provide it all the events will be console.logged after you start the app
   });
 
   await instance.start();
 
   await instance.addTrigger({
-    name: 'monitoring all statments',
-    expression: 'smart_buddy.*', // listen to contextual_play database !!!
+    name: "monitoring all statments",
+    expression: "smart_buddy.*", // listen to contextual_play database !!!
     statement: MySQLEvents.STATEMENTS.ALL, // you can choose only insert for example MySQLEvents.STATEMENTS.INSERT, but here we are choosing everything
-    onEvent: async (e) => {      
-        // console.log(e)
-        if (e.table === 'contextual_play') {
-          const sql = "select * from contextual_play";
-          connection.query(sql, (err, result) => {
-            console.log(result)
-            if (err) throw err;
-            io.sockets.emit("contextual_play_data", result);
-          });
-        } else if (e.table === 'descriptive_play') {
-          const sql = "select * from descriptive_play";
-          connection.query(sql, (err, result) => {
-            console.log(result)
-            if (err) throw err;
-            io.sockets.emit("descriptive_play_data", result);
-          });
-  
-        } else if (e.table === 'retail') {
-          const sql = "select * from retail";
-          connection.query(sql, (err, result) => {
-            console.log(result)
-            if (err) throw err;
-            io.sockets.emit("retail_data", result);
-          });
-        }
-        else if (e.table === 'barcode_scan') {
-          const sql = "select * from barcode_scan";
-          connection.query(sql, (err, result) => {
-            console.log(result)
-            if (err) throw err;
-            io.sockets.emit("barcode_data", result);
-          });
-        }
+    onEvent: async (e) => {
+      // console.log(e)
+      if (e.table === "contextual_play") {
+        const sql = "select * from contextual_play";
+        connection.query(sql, (err, result) => {
+          console.log(result);
+          if (err) throw err;
+          io.sockets.emit("contextual_play_data", result);
+        });
+      } else if (e.table === "conversation") {
+        const sql = "select * from conversation";
+        connection.query(sql, (err, result) => {
+          console.log(result);
+          if (err) throw err;
+          io.sockets.emit("conversation_data", result);
+        });
+      } else if (e.table === "descriptive_play") {
+        const sql = "select * from descriptive_play";
+        connection.query(sql, (err, result) => {
+          console.log(result);
+          if (err) throw err;
+          io.sockets.emit("descriptive_play_data", result);
+        });
+      } else if (e.table === "retail") {
+        const sql = "select * from retail";
+        connection.query(sql, (err, result) => {
+          console.log(result);
+          if (err) throw err;
+          io.sockets.emit("retail_data", result);
+        });
+      } else if (e.table === "barcode_scan") {
+        const sql = "select * from barcode_scan";
+        connection.query(sql, (err, result) => {
+          console.log(result);
+          if (err) throw err;
+          io.sockets.emit("barcode_data", result);
+        });
+      }else if (e.table === "conversation") {
+        const sql = "select * from conversation";
+        connection.query(sql, (err, result) => {
+          console.log(result);
+          if (err) throw err;
+          io.sockets.emit("conversation_data", result);
+        });
       }
-  //     console.log(e.affectedRows[0].after)
-  //     const sql = "select * from contextual_play";
-  //     connection.query(sql, (err, result) => {
-  //       // console.log(result)
-  //       if (err) throw err;
-  //       io.sockets.emit("contextual_play_data", result);
-  //     });
-  //   }
+    },
+    //     console.log(e.affectedRows[0].after)
+    //     const sql = "select * from contextual_play";
+    //     connection.query(sql, (err, result) => {
+    //       // console.log(result)
+    //       if (err) throw err;
+    //       io.sockets.emit("contextual_play_data", result);
+    //     });
+    //   }
   });
 
   instance.on(MySQLEvents.EVENTS.CONNECTION_ERROR, console.error);
@@ -148,9 +177,8 @@ const program = async () => {
 };
 
 program()
-  .then(() => console.log('Waiting for database events...'))
+  .then(() => console.log("Waiting for database events..."))
   .catch(console.error);
-
 
 io.on("connection", (socket) => {
   console.log("New client connected");
